force-app/main/default/objects/Rental_Unit__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Assigning Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>