force-app/main/default/objects/Rental_Unit__c/fields/Heating__c.field-meta.xml
<CustomField>
    <fullName>Heating__c</fullName>
    <label>Heating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forced Air</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>