force-app/main/default/objects/Rental_Unit__c/fields/Laundry__c.field-meta.xml
<CustomField>
    <fullName>Laundry__c</fullName>
    <label>Laundry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Unit hook-ups</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>