force-app/main/default/objects/Rental_Unit__c/fields/Pets_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Pets_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets Allowed</label>
    <type>Checkbox</type>
</CustomField>