force-app/main/default/objects/Rental_Unit__c/fields/Rental_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit_Name__c</fullName>
    <label>Rental Unit Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>