force-app/main/default/objects/Rental_Unit__c/fields/Utilities_Include__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Include__c</fullName>
    <label>Utilities Include</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Water</fullName>
            </value>
            <value>
                <fullName>Hot Water</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Sewage</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>